tests/syntax_error/float.jou
123abc45f  # Error: invalid number or variable name "123abc45f"
